--- a/index.html
+++ b/index.html
@@ -10,33 +10,36 @@
 </head>
 
 <body>
-
-    <nav>
+    <header>
         <div class="logo">
+            <div class="logopic"></div>
         </div>
-        <ul class="menu">
-            <li>
-                <a href="ommig.html" class="txt">Om mig</a>
-            </li>
-            <li>
-                <a href="web.html" class="txt">Web</a>
-            </li>
-            <li>
-                <a href="ux.html" class="txt">UX</a>
-            </li>
-            <li>
-                <a href="animation.html" class="txt">Animation</a>
-            </li>
-            <li>
-                <a href="indhold.html" class="txt">Indhold</a>
-            </li>
-        </ul>
-        <div class="burger">
-            <div class="line"></div>
-            <div class="line"></div>
-            <div class="line"></div>
-        </div>
-    </nav>
+        <nav>
+
+            <ul class="menu">
+                <li>
+                    <a href="ommig.html" class="txt">Om mig</a>
+                </li>
+                <li>
+                    <a href="web.html" class="txt">Web</a>
+                </li>
+                <li>
+                    <a href="ux.html" class="txt">UX</a>
+                </li>
+                <li>
+                    <a href="animation.html" class="txt">Animation</a>
+                </li>
+                <li>
+                    <a href="indhold.html" class="txt">Indhold</a>
+                </li>
+            </ul>
+            <div class="burger">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
+        </nav>
+    </header>
     <script src="menu.js"></script>
 </body>
 
