--- a/index.html
+++ b/index.html
@@ -40,6 +40,24 @@
             </div>
         </nav>
     </header>
+    <div class="crystal">
+    </div>
+    <div class="box">
+        <div class="indexlogo">
+
+        </div>
+        <div class="indexportfolio">Portfolio</div>
+        <div class="indexcitat">
+            "What makes us different, also makes us stand out"
+        </div>
+        <div class="knap">
+            <div class="knapbbypink">
+
+                <div class="knaptxt">Om mig</div>
+            </div>
+            <div class="knappink"></div>
+        </div>
+    </div>
     <script src="menu.js"></script>
 </body>
 
