--- a/index.html
+++ b/index.html
@@ -5,41 +5,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="design.css">
     <title>Ida</title>
 </head>
 
 <body>
-    <header>
-        <div class="logo">
-            <div class="logopic"></div>
-        </div>
-        <nav>
 
-            <ul class="menu">
-                <li>
-                    <a href="ommig.html" class="txt">Om mig</a>
-                </li>
-                <li>
-                    <a href="web.html" class="txt">Web</a>
-                </li>
-                <li>
-                    <a href="ux.html" class="txt">UX</a>
-                </li>
-                <li>
-                    <a href="animation.html" class="txt">Animation</a>
-                </li>
-                <li>
-                    <a href="indhold.html" class="txt">Indhold</a>
-                </li>
-            </ul>
-            <div class="burger">
-                <div class="line"></div>
-                <div class="line"></div>
-                <div class="line"></div>
-            </div>
-        </nav>
-    </header>
+
+
+    <nav>
+        <a href="index.html">
+            <div class="logopic"></div>
+        </a>
+
+        <input type="checkbox" id="click">
+        <label for="click" class="menu-btn">
+            <i class="fas fa-bars"></i>
+        </label>
+        <ul class="active">
+            <li>
+                <a href="ommig.html">Om mig</a>
+            </li>
+            <li><a href="introuge.html">Introuge</a></li>
+            <li><a href="web.html">Web</a></li>
+            <li><a href="ux.html">Ux</a></li>
+            <li><a href="animation.html">Animation</a></li>
+            <li><a href="indhold.html">Indhold</a></li>
+            <li><a href="process.html">Process</a></li>
+        </ul>
+    </nav>
+
     <div class="crystal">
     </div>
     <div class="box">
@@ -58,7 +56,18 @@
             <div class="knappink"></div>
         </div>
     </div>
-    <script src="menu.js"></script>
+
+    <footer>
+        <div class="socials">Socials:
+            <div class="instagram"></div>
+            <div class="facebook"></div>
+            <div class="twitter"></div>
+        </div>
+        <div class="linje1"></div>
+        <div class="copyright">© 2023 Ida Mikkelsen - All right reserved</div>
+        <div class="linje2"></div>
+        <div class="kontakt">Kontakt: +4561695429 Niji.ida@hotmail.com</div>
+    </footer>
 </body>
 
 </html>
