--- a/cv.html
+++ b/cv.html
@@ -28,7 +28,6 @@
             <li>
                 <a class="active" href="ommig.html">Om mig</a>
             </li>
-            <li><a href="introuge.html">Introuge</a></li>
             <li><a href="web.html">Web</a></li>
             <li><a href="ux.html">Ux</a></li>
             <li><a href="animation.html">Animation</a></li>
@@ -43,8 +42,29 @@
     <div class="crystal">
     </div>
     <div class="box">
+        <div class="cv_grid">
+            <h1 class="cv_overskrift1">CV</h1>
 
-
+            <div class="cv_overskrift cvo1">
+                Sprog:
+            </div>
+            <div class="cv_txt cv1">
+                HTML, CSS og JavaScript
+            </div>
+            <div class="cv_overskrift cvo2">
+                Software:
+            </div>
+            <div class="cv_txt cv2">
+                Photoshop, Illustrator, Adobe XD,
+                Premiere Pro og Clip studio
+            </div>
+            <div class="cv_overskrift cvo3">
+                Jobs:
+            </div>
+            <div class="cv_txt cv3">Illustreret invester materiale til danseapplikation,
+                Badjango Dance Center app og DaFreeGo</div>
+            <div class="ommig_pic"></div>
+        </div>
 
     </div>
 
