--- a/ommig.html
+++ b/ommig.html
@@ -28,7 +28,6 @@
             <li>
                 <a class="active" href="ommig.html">Om mig</a>
             </li>
-            <li><a href="introuge.html">Introuge</a></li>
             <li><a href="web.html">Web</a></li>
             <li><a href="ux.html">Ux</a></li>
             <li><a href="animation.html">Animation</a></li>
@@ -43,9 +42,31 @@
     <div class="crystal">
     </div>
     <div class="box">
+        <div class="ommig_grid">
+            <h1 class="ommig_overskrift">Hvem er jeg?</h1>
+            <div class="ommig_txt">
+                <p>Jeg er Ida! En ung kvinde på 23 år som går på Københavns Erhvervs Akademi hvor jeg studerer
+                    multimedie-design
+                    på 1.
+                    semester.
+                    <br> <br>
+                    Jeg har altid været glad for det kreative, men igennem min uddannelse er jeg blevet rigtig glad for
+                    kodning,
+                    synes det
+                    er et super spændende emne.
+                </p>
+            </div>
+            <div class="ommig_pic"></div>
+        </div>
+        <a href="cv.html">
+            <div id="ommigknap" class="knap">
+                <div class="knapbbypink">
 
-
-
+                    <div id="ommigknaptxt" class="knaptxt">Klik her for CV</div>
+                </div>
+                <div class="knappink"></div>
+            </div>
+        </a>
     </div>
 
 
