--- a/index.html
+++ b/index.html
@@ -15,25 +15,29 @@
 <body>
 
 
-
+    <a href="index.html">
+        <div class="logopic"></div>
+    </a>
     <nav>
-        <a href="index.html">
-            <div class="logopic"></div>
-        </a>
+
 
         <input type="checkbox" id="click">
         <label for="click" class="menu-btn">
             <i class="fas fa-bars"></i>
         </label>
-        <ul class="active">
+        <ul class="active drop-down closed border">
             <li>
-                <a href="ommig.html">Om mig</a>
+                <a class="nav-button leavelink" href="ommig.html">Om mig</a>
             </li>
-            <li><a href="web.html">Web</a></li>
-            <li><a href="ux.html">Ux</a></li>
-            <li><a href="animation.html">Animation</a></li>
-            <li><a href="indhold.html">Indhold</a></li>
-            <li><a href="process.html">Process</a></li>
+
+            <li>
+                <a class="leavelink" href="cv.html">CV</a>
+            </li>
+
+
+
+
+
         </ul>
     </nav>
 
@@ -67,6 +71,8 @@
         <div class="linje2"></div>
         <div class="kontakt">Kontakt: +4561695429 Niji.ida@hotmail.com</div>
     </footer>
+
+    <script src="javascript.js"></script>
 </body>
 
 </html>
