--- a/cv.html
+++ b/cv.html
@@ -14,26 +14,84 @@
 
 <body>
 
-
+    <a href="index.html">
+        <div class="logopic"></div>
+    </a>
     <nav>
-        <a href="index.html">
-            <div class="logopic"></div>
-        </a>
+
 
         <input type="checkbox" id="click">
         <label for="click" class="menu-btn">
             <i class="fas fa-bars"></i>
         </label>
-        <ul class="active">
+        <ul class="active drop-down1 closed border">
             <li>
-                <a class="active" href="ommig.html">Om mig</a>
+                <a class="nav-button1 leavelink" href="ommig.html">Om mig</a>
             </li>
-            <li><a href="web.html">Web</a></li>
-            <li><a href="ux.html">Ux</a></li>
-            <li><a href="animation.html">Animation</a></li>
-            <li><a href="indhold.html">Indhold</a></li>
-            <li><a href="process.html">Process</a></li>
+
+            <li>
+                <a class="leavelink" href="cv.html">CV</a>
+            </li>
         </ul>
+
+        <ul class="active drop-down2 closed border">
+            <li>
+                <a class="nav-button2 leavelink" href="web.html">Web</a>
+            </li>
+
+            <li>
+                <a class="leavelink" href="studiestarts.html">Studiestartsprøve</a>
+            </li>
+            <li>
+                <a class="leavelink" href="emnesite.html">Emnesite</a>
+            </li>
+
+
+        </ul>
+
+        <ul class="active drop-down3 closed border">
+            <li>
+                <a class="nav-button3 leavelink" href="ux.html">UX</a>
+            </li>
+
+            <li>
+                <a class="leavelink" href="sketches.html">Sketches</a>
+            </li>
+            <li>
+                <a class="leavelink" href="prototype.html">Prototype</a>
+            </li>
+
+
+        </ul>
+        <ul class="active drop-down4 closed border">
+            <li>
+                <a class="nav-button4 leavelink" href="animation.html">Animation</a>
+            </li>
+        </ul>
+
+        <ul class="active drop-down5 closed border">
+            <li>
+                <a class="nav-button5 leavelink" href="indhold.html">Indhold</a>
+            </li>
+
+            <li>
+                <a class="leavelink" href="passionsvideo.html">Passion</a>
+            </li>
+            <li>
+                <a class="leavelink" href="virksomhedssite.html">Re-design</a>
+            </li>
+
+
+        </ul>
+        <ul class="active drop-down6 closed border">
+            <li>
+                <a class="nav-button6 leavelink" href="process.html">Process</a>
+            </li>
+        </ul>
+
+
+
+
     </nav>
 
 
@@ -81,7 +139,7 @@
         <div class="linje2"></div>
         <div class="kontakt">Kontakt: +4561695429 Niji.ida@hotmail.com</div>
     </footer>
-
+    <script src="javascript.js"></script>
 </body>
 
 </html>
