--- a/index.html
+++ b/index.html
@@ -25,20 +25,74 @@
         <label for="click" class="menu-btn">
             <i class="fas fa-bars"></i>
         </label>
-        <ul class="active drop-down closed border">
+        <ul class="active drop-down1 closed border">
             <li>
-                <a class="nav-button leavelink" href="ommig.html">Om mig</a>
+                <a class="nav-button1 leavelink" href="ommig.html">Om mig</a>
             </li>
 
             <li>
                 <a class="leavelink" href="cv.html">CV</a>
             </li>
+        </ul>
 
+        <ul class="active drop-down2 closed border">
+            <li>
+                <a class="nav-button2 leavelink" href="web.html">Web</a>
+            </li>
 
-
+            <li>
+                <a class="leavelink" href="studiestarts.html">Studiestartsprøve</a>
+            </li>
+            <li>
+                <a class="leavelink" href="emnesite.html">Emnesite</a>
+            </li>
 
 
         </ul>
+
+        <ul class="active drop-down3 closed border">
+            <li>
+                <a class="nav-button3 leavelink" href="ux.html">UX</a>
+            </li>
+
+            <li>
+                <a class="leavelink" href="sketches.html">Sketches</a>
+            </li>
+            <li>
+                <a class="leavelink" href="prototype.html">Prototype</a>
+            </li>
+
+
+        </ul>
+        <ul class="active drop-down4 closed border">
+            <li>
+                <a class="nav-button4 leavelink" href="animation.html">Animation</a>
+            </li>
+        </ul>
+
+        <ul class="active drop-down5 closed border">
+            <li>
+                <a class="nav-button5 leavelink" href="indhold.html">Indhold</a>
+            </li>
+
+            <li>
+                <a class="leavelink" href="passionsvideo.html">Passion</a>
+            </li>
+            <li>
+                <a class="leavelink" href="virksomhedssite.html">Re-design</a>
+            </li>
+
+
+        </ul>
+        <ul class="active drop-down6 closed border">
+            <li>
+                <a class="nav-button6 leavelink" href="process.html">Process</a>
+            </li>
+        </ul>
+
+
+
+
     </nav>
 
     <div class="crystal">
@@ -51,13 +105,16 @@
         <div class="indexcitat">
             "What makes us different, also makes us stand out"
         </div>
-        <div class="knap">
-            <div class="knapbbypink">
+        <a href="ommig.html">
+            <div class="knap">
+                <div class="knapbbypink">
 
-                <div class="knaptxt">Om mig</div>
+                    <div class="knaptxt">Om mig</div>
+                </div>
+                <div class="knappink"></div>
             </div>
-            <div class="knappink"></div>
-        </div>
+        </a>
+
     </div>
 
     <footer>
