--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="knap">
                 <div class="knapbbypink">
 
-                    <div class="knaptxt">Om mig</div>
+                    <div id="knaptxt">Om mig</div>
                 </div>
                 <div class="knappink"></div>
             </div>
