--- a/indhold.html
+++ b/indhold.html
@@ -9,7 +9,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="design.css">
-    <title>Om mig</title>
+    <title>Indhold</title>
 </head>
 
 <body>
@@ -100,7 +100,27 @@
     </div>
     <div class="box">
 
+        <div class="indhold_overskrift1 overskrift">Passions video</div>
+        <a href="passionsvideo.html">
+            <div id="indhold1knap" class="knap">
+                <div class="knapbbypink">
 
+                    <div class="knaptxt">Klik her</div>
+                </div>
+                <div class="knappink"></div>
+            </div>
+        </a>
+
+        <div class="indhold_overskrift2 overskrift">Re-design</div>
+        <a href="virksomhedssite.html">
+            <div id="indhold2knap" class="knap">
+                <div class="knapbbypink">
+
+                    <div class="knaptxt">Klik her</div>
+                </div>
+                <div class="knappink"></div>
+            </div>
+        </a>
 
     </div>
 
