--- a/ommig.html
+++ b/ommig.html
@@ -114,7 +114,7 @@
             <div id="ommigknap" class="knap">
                 <div class="knapbbypink">
 
-                    <div id="ommigknaptxt" class="knaptxt">Klik her for CV</div>
+                    <div class="knaptxt">Klik her for CV</div>
                 </div>
                 <div class="knappink"></div>
             </div>
