--- a/ux.html
+++ b/ux.html
@@ -9,7 +9,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="design.css">
-    <title>Om mig</title>
+    <title>UX</title>
 </head>
 
 <body>
@@ -102,7 +102,27 @@
     </div>
     <div class="box">
 
+        <div class="ux_overskrift1 overskrift">Sketches</div>
+        <a href="sketches.html">
+            <div id="ux1knap" class="knap">
+                <div class="knapbbypink">
 
+                    <div class="knaptxt">Klik her</div>
+                </div>
+                <div class="knappink"></div>
+            </div>
+        </a>
+
+        <div class="ux_overskrift2 overskrift">Prototype</div>
+        <a href="prototype.html">
+            <div id="ux2knap" class="knap">
+                <div class="knapbbypink">
+
+                    <div class="knaptxt">Klik her</div>
+                </div>
+                <div class="knappink"></div>
+            </div>
+        </a>
 
     </div>
 
