--- a/web.html
+++ b/web.html
@@ -9,7 +9,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="design.css">
-    <title>Om mig</title>
+    <title>Web</title>
 </head>
 
 <body>
@@ -99,7 +99,37 @@
 
 
 
+        <div class="web_overskrift1 overskrift">Studiestartsprøve</div>
+        <a href="studiestarts.html">
+            <div id="web1knap" class="knap">
+                <div class="knapbbypink">
+
+                    <div class="knaptxt">Klik her</div>
+                </div>
+                <div class="knappink"></div>
+            </div>
+        </a>
+
+        <div class="web_overskrift2 overskrift">Emnesite</div>
+        <a href="emnesite.html">
+            <div id="web2knap" class="knap">
+                <div class="knapbbypink">
+
+                    <div class="knaptxt">Klik her</div>
+                </div>
+                <div class="knappink"></div>
+            </div>
+        </a>
     </div>
+
+
+
+
+
+
+
+
+
 
 
     <footer>
