--- a/prototype.html
+++ b/prototype.html
@@ -9,7 +9,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="design.css">
-    <title>Om mig</title>
+    <title>Prototype</title>
 </head>
 
 <body>
