--- a/emnesite.html
+++ b/emnesite.html
@@ -101,7 +101,35 @@
     </div>
     <div class="box">
 
+        <div class="emnegallery">
+            <div class="emneimgbox">
+                <div class="emneimg emne1"></div>
+                <div class="emneimg emne2"></div>
+                <div class="emneimg emne3"></div>
+                <div class="emneimg emne4"></div>
+            </div>
+        </div>
 
+        <div class="emnegrid">
+            <h1 class="emneoverskrift1">Emnesite</h1>
+            <h2 class="emneoverskrift2">Hvad har jeg lært?</h2>
+            <p class="emnetxt">Da jeg lavede emnesitet lærte jeg hvordan vi skulle opstille et moodboard samt Styletile,
+                eftersom at vi selv skulle
+                designe denne hjemmeside.
+                <br>Her lærte jeg også at lave mine egne wireframes. <br>
+                Jeg stylede også min første burgermenu og implementerede den.
+            </p>
+        </div>
+
+        <a href="cv.html">
+            <div id="emneknap" class="knap">
+                <div class="knapbbypink">
+
+                    <div class="knaptxt">Klik her</div>
+                </div>
+                <div class="knappink"></div>
+            </div>
+        </a>
 
     </div>
 
