--- a/sketches.html
+++ b/sketches.html
@@ -100,9 +100,33 @@
     <div class="crystal">
     </div>
     <div class="box">
+        <div class="sketchgallery">
+            <div class="sketchimgbox">
+                <div class="sketchimg sketch1"></div>
+                <div class="sketchimg sketch2"></div>
+                <div class="sketchimg sketch3"></div>
+            </div>
+        </div>
+        <div class="sketchgrid">
+            <h1 class="sketchoverskrift1">Sketches</h1>
+            <h2 class="sketchoverskrift2">Hvad har jeg lært?</h2>
+            <p class="sketchtxt">På denne side ses nogle af de forskellige sketches der er udarbejdet i UX temaet. Jeg
+                har lært om diverse sketch metoder
+                som 'Crazy 8' samt 'Heatmap'
+                Inden sketchfasen lært jeg en del om forskellige research metoder. Her gjorde jeg brug af både desk
+                research, interview
+                og survey.
+            </p>
+        </div>
+        <a href="cv.html">
+            <div id="sketchknap" class="knap">
+                <div class="knapbbypink">
 
-
-
+                    <div class="knaptxt">Klik her</div>
+                </div>
+                <div class="knappink"></div>
+            </div>
+        </a>
     </div>
 
 
