--- a/virksomhedssite.html
+++ b/virksomhedssite.html
@@ -100,6 +100,35 @@
     <div class="crystal">
     </div>
     <div class="box">
+        <div class="virksomhedgallery">
+            <div class="virksomhedimgbox">
+                <div class="virksomhedimg virksomhed1"></div>
+                <div class="virksomhedimg virksomhed2"></div>
+                <div class="virksomhedimg virksomhed3"></div>
+                <div class="virksomhedimg virksomhed4"></div>
+            </div>
+        </div>
+
+
+
+        <div class="virksomhedgrid">
+            <h1 class="virksomhedoverskrift1">Re-design</h1>
+            <h2 class="virksomhedoverskrift2">Hvad har jeg lært?</h2>
+            <p class="virksomhedtxt">Prototypen er lavet i adobe XD. Jeg lærte om hvordan man kan forbinder de
+                forskellige
+                artboards of får dem til at virke
+                som hjemmeside.
+            </p>
+        </div>
+        <a href="cv.html">
+            <div id="virksomhedknap" class="knap">
+                <div class="knapbbypink">
+
+                    <div class="knaptxt">Klik her</div>
+                </div>
+                <div class="knappink"></div>
+            </div>
+        </a>
 
 
     </div>
