--- a/animation.html
+++ b/animation.html
@@ -9,7 +9,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="design.css">
-    <title>Om mig</title>
+    <title>Animation</title>
 </head>
 
 <body>
@@ -100,7 +100,34 @@
     <div class="crystal">
     </div>
     <div class="box">
+        <div class="anigallery">
+            <div class="aniimgbox">
+                <div class="aniimg ani1"></div>
+                <div class="aniimg ani2"></div>
+                <div class="aniimg ani3"></div>
+                <div class="aniimg ani4"></div>
+            </div>
+        </div>
 
+
+
+        <div class="anigrid">
+            <h1 class="anioverskrift1">Prototype</h1>
+            <h2 class="anioverskrift2">Hvad har jeg lært?</h2>
+            <p class="anitxt">Prototypen er lavet i adobe XD. Jeg lærte om hvordan man kan forbinder de forskellige
+                artboards of får dem til at virke
+                som hjemmeside.
+            </p>
+        </div>
+        <a href="cv.html">
+            <div id="aniknap" class="knap">
+                <div class="knapbbypink">
+
+                    <div class="knaptxt">Klik her</div>
+                </div>
+                <div class="knappink"></div>
+            </div>
+        </a>
 
 
     </div>
