--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <label for="click" class="menu-btn">
             <i class="fas fa-bars"></i>
         </label>
-        <ul class="active drop-down1 closed border">
+        <ul class="active drop-down1 closed border mobilcolor">
             <li>
                 <a class="nav-button1 leavelink" href="ommig.html">Om mig</a>
             </li>
@@ -35,7 +35,7 @@
             </li>
         </ul>
 
-        <ul class="active drop-down2 closed border">
+        <ul class="active drop-down2 closed border mobilcolor">
             <li>
                 <a class="nav-button2 leavelink" href="web.html">Web</a>
             </li>
@@ -50,7 +50,7 @@
 
         </ul>
 
-        <ul class="active drop-down3 closed border">
+        <ul class="active drop-down3 closed border mobilcolor">
             <li>
                 <a class="nav-button3 leavelink" href="ux.html">UX</a>
             </li>
@@ -64,13 +64,13 @@
 
 
         </ul>
-        <ul class="active drop-down4 closed border">
+        <ul class="active drop-down4 closed border mobilcolor">
             <li>
                 <a class="nav-button4 leavelink" href="animation.html">Animation</a>
             </li>
         </ul>
 
-        <ul class="active drop-down5 closed border">
+        <ul class="active drop-down5 closed border mobilcolor">
             <li>
                 <a class="nav-button5 leavelink" href="indhold.html">Indhold</a>
             </li>
@@ -84,7 +84,7 @@
 
 
         </ul>
-        <ul class="active drop-down6 closed border">
+        <ul class="active drop-down6 closed border mobilcolor">
             <li>
                 <a class="nav-button6 leavelink" href="process.html">Process</a>
             </li>
@@ -95,9 +95,9 @@
 
     </nav>
 
-    <div class="crystal">
-    </div>
     <div class="box">
+        <div class="crystal">
+        </div>
         <div class="indexlogo">
 
         </div>
