--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             "What makes us different, also makes us stand out"
         </div>
         <a href="ommig.html">
-            <div class="knap">
+            <div id="indexknap" class="knap">
                 <div class="knapbbypink">
 
                     <span id="knaptxt" class="knaptxtani">Om mig</span>
