--- a/cv.html
+++ b/cv.html
@@ -97,11 +97,13 @@
 
 
 
-    <div class="crystal">
-    </div>
+
     <div class="box">
+        <div class="crystal">
+        </div>
         <div class="cv_grid">
             <h1 class="cv_overskrift1">CV</h1>
+            <div class="cv_pic"></div>
             <div class="cv_txtsize">
                 <div class="cv_overskrift cvo1">
                     Sprog:
@@ -121,7 +123,7 @@
                 </div>
                 <div class="cv_txt cv3">Illustreret invester materiale til danseapplikation,
                     Badjango Dance Center app og DaFreeGo</div>
-                <div class="ommig_pic"></div>
+
             </div>
         </div>
 
