--- a/studiestarts.html
+++ b/studiestarts.html
@@ -96,37 +96,42 @@
 
 
 
-    <div class="crystal">
-    </div>
+
     <div class="box">
-        <div class="studiegallery">
-            <div class="studieimgbox">
-                <div class="studieimg studie1"></div>
-                <div class="studieimg studie2"></div>
-                <div class="studieimg studie3"></div>
-                <div class="studieimg studie4"></div>
-            </div>
-        </div>
-        <div class="studiegrid">
-            <h1 class="studiestartoverskrift1">Studiestartsprøve</h1>
-            <h2 class="studiestartoverskrift2">Hvad har jeg lært?</h2>
-            <p class="studiestarttxt">Igennem studiestartsprøven har lært omkring brugen af HTML og CSS. <br>
-                Jeg har også lært om hvordan man sætter et HTML dokument op ud fra et layoutdiagram samt wireframe, som
-                begge blev
-                udleveret af underviserne. <br>
-                Jeg blev også introduceret til FileZilla samt VSC med diverse plug-ins</p>
-        </div>
 
-        <a href="cv.html">
-            <div id="studiestartknap" class="knap">
-                <div class="knapbbypink">
+        <div class="crystal">
+        </div>
+        <div class="studiegrid1">
 
-                    <div class="knaptxt">Klik her</div>
+            <div class="studiegallery">
+                <div class="studieimgbox">
+                    <div class="studieimg studie1"></div>
+                    <div class="studieimg studie2"></div>
+                    <div class="studieimg studie3"></div>
+                    <div class="studieimg studie4"></div>
                 </div>
-                <div class="knappink"></div>
             </div>
-        </a>
+            <div class="studiegrid">
+                <h1 class="studiestartoverskrift1">Studiestartsprøve</h1>
+                <h2 class="studiestartoverskrift2">Hvad har jeg lært?</h2>
+                <p class="studiestarttxt">Igennem studiestartsprøven har lært omkring brugen af HTML og CSS. <br>
+                    Jeg har også lært om hvordan man sætter et HTML dokument op ud fra et layoutdiagram samt wireframe,
+                    som
+                    begge blev
+                    udleveret af underviserne. <br>
+                    Jeg blev også introduceret til FileZilla samt VSC med diverse plug-ins</p>
+            </div>
 
+            <a href="cv.html">
+                <div id="studiestartknap" class="knap">
+                    <div class="knapbbypink">
+
+                        <div class="knaptxt">Klik her</div>
+                    </div>
+                    <div class="knappink"></div>
+                </div>
+            </a>
+        </div>
     </div>
 
 
