--- a/animation.html
+++ b/animation.html
@@ -97,38 +97,40 @@
 
 
 
-    <div class="crystal">
-    </div>
+
     <div class="box">
-        <div class="anigallery">
-            <div class="aniimgbox">
-                <div class="aniimg ani1"></div>
-                <div class="aniimg ani2"></div>
-                <div class="aniimg ani3"></div>
-                <div class="aniimg ani4"></div>
-            </div>
+        <div class="crystal">
         </div>
-
-
-
-        <div class="anigrid">
-            <h1 class="anioverskrift1">Prototype</h1>
-            <h2 class="anioverskrift2">Hvad har jeg lært?</h2>
-            <p class="anitxt">Prototypen er lavet i adobe XD. Jeg lærte om hvordan man kan forbinder de forskellige
-                artboards of får dem til at virke
-                som hjemmeside.
-            </p>
-        </div>
-        <a href="cv.html">
-            <div id="aniknap" class="knap">
-                <div class="knapbbypink">
-
-                    <div class="knaptxt">Klik her</div>
+        <div class="anigrid1">
+            <div class="anigallery">
+                <div class="aniimgbox">
+                    <div class="aniimg ani1"></div>
+                    <div class="aniimg ani2"></div>
+                    <div class="aniimg ani3"></div>
+                    <div class="aniimg ani4"></div>
                 </div>
-                <div class="knappink"></div>
             </div>
-        </a>
 
+
+
+            <div class="anigrid">
+                <h1 class="anioverskrift1">Prototype</h1>
+                <h2 class="anioverskrift2">Hvad har jeg lært?</h2>
+                <p class="anitxt">Prototypen er lavet i adobe XD. Jeg lærte om hvordan man kan forbinder de forskellige
+                    artboards of får dem til at virke
+                    som hjemmeside.
+                </p>
+            </div>
+            <a href="cv.html">
+                <div id="aniknap" class="knap">
+                    <div class="knapbbypink">
+
+                        <div class="knaptxt">Klik her</div>
+                    </div>
+                    <div class="knappink"></div>
+                </div>
+            </a>
+        </div>
 
     </div>
 
