--- a/passionsvideo.html
+++ b/passionsvideo.html
@@ -96,39 +96,41 @@
 
 
 
-    <div class="crystal">
-    </div>
+
     <div class="box">
-
-        <div class="passiongallery">
-            <div class="passionimgbox">
-                <div class="passionimg passion1"></div>
-                <div class="passionimg passion2"></div>
-                <div class="passionimg passion3"></div>
-                <div class="passionimg passion4"></div>
-            </div>
+        <div class="crystal">
         </div>
-
-
-
-        <div class="passiongrid">
-            <h1 class="passionoverskrift1">Passions video</h1>
-            <h2 class="passionoverskrift2">Hvad har jeg lært?</h2>
-            <p class="passiontxt">Prototypen er lavet i adobe XD. Jeg lærte om hvordan man kan forbinder de forskellige
-                artboards of får dem til at virke
-                som hjemmeside.
-            </p>
-        </div>
-        <a href="cv.html">
-            <div id="passionknap" class="knap">
-                <div class="knapbbypink">
-
-                    <div class="knaptxt">Klik her</div>
+        <div class="passiongrid1">
+            <div class="passiongallery">
+                <div class="passionimgbox">
+                    <div class="passionimg passion1"></div>
+                    <div class="passionimg passion2"></div>
+                    <div class="passionimg passion3"></div>
+                    <div class="passionimg passion4"></div>
                 </div>
-                <div class="knappink"></div>
             </div>
-        </a>
 
+
+
+            <div class="passiongrid">
+                <h1 class="passionoverskrift1">Passions video</h1>
+                <h2 class="passionoverskrift2">Hvad har jeg lært?</h2>
+                <p class="passiontxt">Prototypen er lavet i adobe XD. Jeg lærte om hvordan man kan forbinder de
+                    forskellige
+                    artboards of får dem til at virke
+                    som hjemmeside.
+                </p>
+            </div>
+            <a href="cv.html">
+                <div id="passionknap" class="knap">
+                    <div class="knapbbypink">
+
+                        <div class="knaptxt">Klik her</div>
+                    </div>
+                    <div class="knappink"></div>
+                </div>
+            </a>
+        </div>
 
     </div>
 
