--- a/prototype.html
+++ b/prototype.html
@@ -95,36 +95,39 @@
 
 
 
-    <div class="crystal">
-    </div>
+
     <div class="box">
-        <div class="protogallery">
-            <div class="protoimgbox">
-                <div class="protoimg proto1"></div>
-                <div class="protoimg proto2"></div>
-            </div>
+        <div class="crystal">
         </div>
-
-
-
-        <div class="protogrid">
-            <h1 class="protooverskrift1">Prototype</h1>
-            <h2 class="protooverskrift2">Hvad har jeg lært?</h2>
-            <p class="prototxt">Prototypen er lavet i adobe XD. Jeg lærte om hvordan man kan forbinder de forskellige
-                artboards of får dem til at virke
-                som hjemmeside.
-            </p>
-        </div>
-        <a href="cv.html">
-            <div id="protoknap" class="knap">
-                <div class="knapbbypink">
-
-                    <div class="knaptxt">Klik her</div>
+        <div class="protogrid1">
+            <div class="protogallery">
+                <div class="protoimgbox">
+                    <div class="protoimg proto1"></div>
+                    <div class="protoimg proto2"></div>
                 </div>
-                <div class="knappink"></div>
             </div>
-        </a>
 
+
+
+            <div class="protogrid">
+                <h1 class="protooverskrift1">Prototype</h1>
+                <h2 class="protooverskrift2">Hvad har jeg lært?</h2>
+                <p class="prototxt">Prototypen er lavet i adobe XD. Jeg lærte om hvordan man kan forbinder de
+                    forskellige
+                    artboards of får dem til at virke
+                    som hjemmeside.
+                </p>
+            </div>
+            <a href="cv.html">
+                <div id="protoknap" class="knap">
+                    <div class="knapbbypink">
+
+                        <div class="knaptxt">Klik her</div>
+                    </div>
+                    <div class="knappink"></div>
+                </div>
+            </a>
+        </div>
     </div>
 
 
