--- a/emnesite.html
+++ b/emnesite.html
@@ -102,13 +102,27 @@
         <div class="crystal">
         </div>
         <div class="emnegrid1">
-            <div class="emnegallery">
-                <div class="emneimgbox">
-                    <div class="emneimg emne1"></div>
-                    <div class="emneimg emne2"></div>
-                    <div class="emneimg emne3"></div>
-                    <div class="emneimg emne4"></div>
+
+            <div class="row emneimgbox">
+                <div class="column emne1">
+                    <img src="billeder/emnesite1.png" alt="pic" onclick="myFunction(this);">
                 </div>
+                <div class="column emne2">
+                    <img src="billeder/emnesite2.png" alt="pic" onclick="myFunction(this);">
+                </div>
+                <div class="column emne3">
+                    <img src="billeder/emnesite3.png" alt="pic" onclick="myFunction(this);">
+                </div>
+                <div class="column emne4">
+                    <img src="billeder/emnesite4.png" alt="pic" onclick="myFunction(this);">
+                </div>
+
+            </div>
+
+            <div class="container">
+                <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+                <img id="expandedImg" style="width:100%">
+                <div id="imgtext"></div>
             </div>
 
             <div class="emnegrid">
