--- a/process.html
+++ b/process.html
@@ -10,14 +10,29 @@
 </head>
 
 <body>
-    <div class="studiegallery">
-        <div class="studieimgbox">
-            <div class="studieimg"></div>
-            <div class="studieimg"></div>
-            <div class="studieimg"></div>
-            <div class="studieimg"></div>
+    <div class="row">
+        <div class="column">
+            <img src="billeder/emnesite1.png" alt="pic" onclick="myFunction(this);">
         </div>
+        <div class="column">
+            <img src="billeder/emnesite2.png" alt="pic" onclick="myFunction(this);">
+        </div>
+        <div class="column">
+            <img src="billeder/emnesite3.png" alt="pic" onclick="myFunction(this);">
+        </div>
+        <div class="column">
+            <img src="billeder/emnesite4.png" alt="pic" onclick="myFunction(this);">
+        </div>
+
     </div>
+
+    <div class="container">
+        <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+        <img id="expandedImg" style="width:100%">
+        <div id="imgtext"></div>
+    </div>
+
+    <script src="javascript.js"></script>
 </body>
 
 </html>
